--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lets Move</title>
+    <link rel='stylesheet' href='styles.css'/>
+    <link
+    rel='stylesheet'
+    href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css'
+    />
+    
 </head>
 <body>
-    
+  <div class='container'>
+    <h1 class='animate__animated animate__zoomIn' style='text-align: center'>Looking To Move</h1>
+    <br>
+  </div>
+  <div class='child'>
+    <img src="marfa.jpg" alt="Office Picture" class='office' id='image'>
+  </div>
 </body>
 </html>
